# data-buddy

./: .env.example  .gitignore  ADR.md  CLAUDE.md  CONTRIBUTING.md  DEV_STATUS.md  Makefile  QA_LOG.md  README.md  SETUP.md  opencode.jsonc
backend/: event_bus.py  main.py  opencode_client.py  orchestrator.py  pyproject.toml  router.py  sse_proxy.py  watchdog.py
backend/agent/: opencode_client.py
backend/agent/prompts/: plan.py  profile.py  redirect.py  section.py
backend/api/: router.py  sse_proxy.py
backend/core/: frontmatter_parser.py  orchestrator.py  qa_controls.py  state_manager.py  watchdog.py
backend/evals/: judge.py  loader.py  models.py  pipeline_driver.py  run_evals.py  test_cases.json
backend/evals/golden_briefs/: customers_churn.json
backend/prompts/: __init__.py  profile.py  section.py
backend/tests/integration/: conftest.py  test_api.py  test_n3_integration.py
backend/tests/unit/: conftest.py  test_main.py
backend/tests/unit/agent/: test_event_subscription.py  test_opencode_client.py  test_plan_prompt.py  test_profile_prompt.py  test_section_prompt.py
backend/tests/unit/api/: test_export.py  test_file_endpoint.py  test_plan_update.py  test_router.py  test_section_accept.py  test_section_drop.py  test_setup.py  test_sse_proxy.py  test_turn.py
backend/tests/unit/app/: test_accept_plan.py  test_event_bus.py  test_event_subscription.py  test_export.py  test_file_endpoint.py  test_frontmatter_parser.py  test_opencode_client.py  test_orchestrator.py  test_persist_plan.py  test_plan_prompt.py  test_plan_update.py  test_profile_prompt.py  (+13 more)
(+118 files in other folders)
